# chalna-rs

./: .gitignore  Cargo.toml  README.md  license  pyproject.toml
.github/workflows/: test.yml
benchmarks/: speed_test.py
chalna_rs/: __init__.py
examples/: demo.py
src/: lib.rs
tests/: test_suite.py
