[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chalna-rs"
version = "0.1.0"
description = "Extremely advanced, high-performance Python-Rust hybrid kit."
authors = [{name = "scxr-dev (R H A Ashan Imalka)", email = "contact@scxr.dev"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
]

[tool.maturin]
features = ["pyo3/extension-module"]